# pipeline-test

./: CMakeLists.txt  README.md  azure-pipelines.yml
src/: CMakeLists.txt  calculator.cpp  calculator.h  main.cpp
tests/: CMakeLists.txt  test_calculator.cpp
